refactor: done images
